--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const latestChronicles = collection
 <BaseLayout>
   <main class="home-page-container">
     <section class="sect-layout">
-      <Image src="home_picture" alt="Doki Doki" />
+      <Image src="home_picture" alt="Doki Doki" height={250} width={300} />
 
       <div>
         <h1>Those Who Dwell in Shadows</h1>
