fix: rss anchor href

--- a/src/pages/chronicles/index.astro
+++ b/src/pages/chronicles/index.astro
@@ -18,7 +18,7 @@ const chronicles = collection.sort(
       role="button"
       rel="noreferrer"
       target="_blank"
-      href="chronicles/rss.xml"
+      href={`${import.meta.env.BASE_URL}/chronicles/rss.xml`}
     >
       <img
         src={`${import.meta.env.BASE_URL}/rss-feed.svg`}
